# django-app-template

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  cookiecutter.json
.github/workflows/: bootstrap.yml
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .codecov.yml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  justfile  pyproject.toml
{{cookiecutter.project_slug}}/.github/: CODEOWNERS  dependabot.yml
{{cookiecutter.project_slug}}/.github/workflows/: lint.yml  scorecard.yml  test-db.yml  test.yml
{{cookiecutter.project_slug}}/doc/source/: changelog.rst  conf.py  index.rst  refs.rst
{{cookiecutter.project_slug}}/doc/source/_static/: style.css
{{cookiecutter.project_slug}}/doc/source/reference/: index.rst
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: __init__.py  apps.py
{{cookiecutter.project_slug}}/tests/: conftest.py  settings.py  test.py
